--- a/APM/src/app/products/product-list.component.html
+++ b/APM/src/app/products/product-list.component.html
@@ -8,19 +8,19 @@
         <div class="row">
             <div class="dcol-md-2">Filter by: </div>
             <div class="col-md-4">
-                <input type="text" />
+                <input type="text" [(ngModel)] = 'listFilter'/>
             </div>
         </div> <!-- end search -->
         <div class="row">
             <div class="col-md-6">
-                <h3>Filtered by:</h3>
+                <h3>Filtered by: {{listFilter}}</h3>
             </div>
         </div> <!-- end filtered by -->
         <div class="table-responsive">
             <table class="table" *ngIf = 'products && products.length'>
                 <thead>
                     <tr>
-                        <th><button class="btn btn-primary">Show image</button></th>
+                        <th><button class="btn btn-primary" (click) = 'toggleImage()'>{{showImage ? 'Hide' : 'Show' }} image</button></th>
                         <th>Product</th>
                         <th>Code</th>
                         <th>Available</th>
@@ -28,11 +28,12 @@
                         <th>5 Star Rating</th>
                     </tr>
                     <tr *ngFor='let product of products'>
-                        <td><img [src] = 'product.imageUrl' /></td>
+                        <td><img  *ngIf = 'showImage'
+                            [src] = 'product.imageUrl' [title]= 'product.productName' [style.width.px] = 'imageWidth' [style.margin.px]='imageMargin'/></td>
                         <td>{{product.productName}}</td>
-                        <td>{{product.productCode}}</td>
+                        <td>{{product.productCode | lowercase }}</td>
                         <td>{{product.releaseDate}}</td>
-                        <td>{{product.price}}</td>
+                        <td>{{product.price | currency: 'USD': true : '1.2-2'}}</td>
                         <td>{{product.starRating}}</td>
                     </tr>
                 </thead>
